[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/Weapon/Weapon.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.15
height = 1.05

[sub_resource type="CapsuleMesh" id=2]
radius = 0.1

[node name="Weapon" type="Area"]
transform = Transform( 0.0889678, 0.299064, 0.457115, 0, 0.677716, -0.203087, -0.996613, 0.0266978, 0.0408054, 0, 1, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshWeapon" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="." to="." method="_on_Arm_body_entered"]
[connection signal="taken" from="." to="." method="_on_Weapon_taken"]
